--- a/main/templates/main/reservation.html
+++ b/main/templates/main/reservation.html
@@ -97,11 +97,7 @@
                 </div>
 
                 <div id="car_form"
-     class="w-full md:w-4/5 mx-auto 
-            grid grid-cols-1 md:grid-cols-2 gap-x-12 gap-y-6 
-            overflow-hidden transition-all duration-500 ease-in-out 
-            max-h-0 opacity-0"
-     style="margin-top:10px;">
+     class="grid grid-cols-2 gap-4 ">
                 <div class="mr-0">
                 <label for="brand" class="block mb-2 text-sm font-medium text-gray-600">Brand:</label>
                 <select name="dropdown1" id="id_dropdown1" class="bg-white border border-[#0F044C] text-gray-900 text-sm rounded-md focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
@@ -145,7 +141,7 @@
             </div>
 
              <div class="mt-2 mr-0">
-                <label for="colour" class="block mb-2 text-sm font-medium text-gray-600">Color:</label>
+                <label for="color" class="block mb-2 text-sm font-medium text-gray-600">Color:</label>
                 <select name="color" id="color" class="bg-white border border-[#0F044C] text-gray-900 text-sm rounded-md focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
                     <option value="" class="hidden"></option>
                     <option value="White">White</option>
@@ -162,7 +158,7 @@
             </div>
 
              <div class="mt-2 mr-0">
-                <label for="colour" class="block mb-2 text-sm font-medium text-gray-600">Plate:</label>
+                <label for="Plate" class="block mb-2 text-sm font-medium text-gray-600">Plate:</label>
                 <select name="plate1" id="plate1" class="bg-white border border-[#0F044C] text-gray-900 text-sm rounded-md focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
                 <option value="" disabled selected class="hidden">Kode</option>
                    <optgroup label="Sumatra">
