--- a/main/templates/main/reservation.html
+++ b/main/templates/main/reservation.html
@@ -767,7 +767,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
                     <script>
 const input = document.getElementById('imageUpload');
-const preview = document.getElementById('carPreview');
+const preview = document.getElementById('preview_image');
 
 input.addEventListener('change', function () {
     const file = input.files[0];
