--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -19,10 +19,17 @@
       </div>
       
       <div class="text-right md:mr-6 md:mb-8 md:mt-12 mt-6">
-        <a href="{% url 'reservation' %}" class="inline-block text-white text-lg md:text-xl font-semibold bg-[#141E61] hover:bg-[#1d2890] focus:ring-4 focus:ring-blue-300 rounded-full px-6 py-3 md:px-10 md:py-4 shadow-lg hover:shadow-[0_0_15px_#141E61] transition-all duration-300 transform hover:scale-105">
-          Reserve Now
-        </a>
+        <div class="flex justify-end gap-4">
+          <a href="{% url 'reservation' %}" class="inline-block text-white text-lg md:text-xl font-semibold bg-[#141E61] hover:bg-[#1d2890] focus:ring-4 focus:ring-blue-300 rounded-full px-6 py-3 md:px-10 md:py-4 shadow-lg hover:shadow-[0_0_15px_#141E61] transition-all duration-300 transform hover:scale-105">
+            Reserve Parking
+          </a>
+          <a href="{% url 'realtime_parking' %}" class="inline-block text-white text-lg md:text-xl font-semibold bg-[#141E61] hover:bg-[#1d2890] focus:ring-4 focus:ring-blue-300 rounded-full px-6 py-3 md:px-10 md:py-4 shadow-lg hover:shadow-[0_0_15px_#141E61] transition-all duration-300 transform hover:scale-105">
+            Real-time Parking
+          </a>
+        </div>
       </div>
+
+      
 
 
       
